# corpos-toolkit

./: .containerignore  .gitignore  CLAUDE.md  CODEMAP.md  CONVENTIONS.md  INTEGRATION_GUIDE.md  README.md  gate.yml
.git-hooks/: post-merge
action-manifests/: block-task.toml  bug-list.toml  bug-read.toml  bug-reopen.toml  bug-resolve.toml  bug-stamp-resolved-sha.toml  cancel-task.toml  chain-status.toml  close-chain.toml  complete-task.toml  dispatch-policy.toml  edit-task-content.toml  find-chain.toml  forge-delete.toml  forge-edit.toml  forge-list.toml  forge.toml  get-chain-state.toml  read-task.toml  reopen-task.toml  resolve-references.toml  search-task-content.toml  start-task.toml  suggestion-list.toml  suggestion-read.toml  suggestion-reopen.toml  suggestion-resolve.toml  suggestion-stamp-sha.toml  unblock-task.toml
clients/escalation/: .gitignore  README.md  pyproject.toml
clients/escalation/src/escalation/: __init__.py  client.py  config.py  router.py  triggers.py
clients/escalation/tests/: test_client.py  test_integration.py  test_router.py  test_triggers.py
docs/: ACTION_DOCS_FRONTEND.md  ACTION_DOC_CONTRACT.md  ACTION_REFERENCE.md  ADDING_A_FORGE_SHAPE.md  ARC_CLOSE_DECISION_AUTHORING_SPLIT.md  ARC_CLOSE_FILING_REVIEW.md  ARC_CLOSE_FILING_REVIEW_DEDUPE.md  ARC_CLOSE_FILING_REVIEW_SUBSTRATE_LISTENER.md  ARC_CLOSE_SNAPSHOT_CORPUS.md  BENCHMARKS.md  CHAIN1_INFERENCE_TELEMETRY_DESIGN.md  CHAIN2_SUCCESS_MODEL_INVENTORY.md  CHAIN2_SUCCESS_MODEL_RETRO.md  CHAIN2_SUCCESS_MODEL_TARGET.md  CHAIN3_ROUTING_INVENTORY.md  CHAIN3_ROUTING_RETRO.md  CODEGEN.md  (+38 more)
(+1250 files in other folders)
