[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-escalation"
version = "0.1.0"
description = "Harness-agnostic reference library for the orchestrator-tier escalation contract (mcp-servers chain orchestrator-tier-escalation-contract). Per-trigger detectors + a cheap<->strong router state machine with de-escalation hysteresis, emitting EscalationProposed events through toolkit-server."
requires-python = ">=3.10"
# Runtime is standard-library only (urllib.request, json) — no third-party
# dependency, so any harness can vendor or pip-install this without pulling a
# transitive tree. See docs/ORCHESTRATOR_ESCALATION.md §7.3.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
